# omake

./: CMakeLists.txt  CMakePresets.json  README.md
omake/: CMakeLists.txt
omake/include/: omake.h
omake/scr/: builder.cpp  omake.cpp  parser.cpp  stats.cpp
